# nacos-sync

./: .gitignore  Cargo.toml  config.yaml  ignore.yaml  sync-config.yaml
src/: config.rs  lib.rs  main.rs  nacos.rs
